--- a/index.html
+++ b/index.html
@@ -8,22 +8,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-        #teste3{
-            background-image: url('image.png');
-        }
-    </style>
   </head>
   <body>
-      <!-- <div class="container">
+      <div class="container">
           <div class="row">
               <div class="col-md-6">
                   <button id="novoTodo" type="button" class="btn btn-primary">Adicionar</button>
               </div>
           </div>
-      </div> -->
-      <div id="teste1">
-        <span id="teste2"></span>
       </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
